2010-11-19  John W. Eaton  <jwe@octave.org>

	* mex.cc (mex::free): Don't warn about skipping memory not
	allocated by mxMalloc, mxCalloc, or mxRealloc.

2010-11-18  Daisuke TAKAGO  <takago@neptune.kanazawa-it.ac.jp>

	* gl-render.cc (opengl_renderer::draw_line):
	Layer markers in 2D plots.

2010-11-18  John W. Eaton  <jwe@octave.org>

	Bug # 31689.

	* ov-str-mat.cc (octave_char_matrix_str::save_ascii):
	Adapt to change in charMatrix::row_as_string function.
	* DLD-FUNCTIONS/md5sum.cc: New tests.

2010-11-17  John W. Eaton  <jwe@octave.org>

	* pt-fcn-handle.cc (tree_anon_fcn_handle::rvalue1): Also stash
	the directory name of the parent function in the newly created
	anonymous function.  Bug #31484.

2010-11-17  John W. Eaton  <jwe@octave.org>

	* oct-parse.yy (parse_fcn_file): Protect and set global_command
	to 0 before calling yyparse.
	* toplev.cc (main_loop): Likewise.

	* oct-parse.yy (eval_string): Set global_command to 0 after
	protecting it and before calling yyparse.
	* input.cc (get_debug_input): Likewise.

2010-11-14  Michael Goffioul  <michael.goffioul@gmail.com>

	* graphics.h.in (graphics_object::get_ancestor): New method.
	* graphics.cc (graphics_object::get_ancestor): Likewise.
	(convert_text_position, convert_cdata): Use it.
	(xget_ancestor): Remove obsolete function.
	* DLD_FUNCTIONS/fltk_backend.cc (plot_window::uimenu_update,
	fltk_backend::update): Replace xget_ancestor with
	graphics_objects::get_ancestor.

2010-11-13  John W. Eaton  <jwe@octave.org>

	* graphics.h.in (figure::properties::filename): Make writable.
	Bug #31450.

2010-11-12  John W. Eaton  <jwe@octave.org>

	* Makefile.am (nodist_liboctinterp_la_SOURCES): Remove
	$(OPT_HANDLERS) from  the  list.  Bug #31623.

2010-11-11  John W. Eaton  <jwe@octave.org>

	* data.cc: New tests for cat.  Enable 4 asserts that were disabled.

2010-11-11  Kai Habel  <kai.habel@gmx.de>

	* fltk-backend.cc (plot_window::uimenu_update,
	fltk_backend::update): Add prefix 'ID_' to property ids to avoid